--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="akademikGecmis">"Dr. Başak Tuna, Kocaeli Üniversitesi'nde Kimya Mühendisliği lisans ve yüksek lisansını, Bradford Üniversitesi'nde nanokompozitler üzerine doktorasını tamamlamıştır. Polymer IRC'de polimer işleme ve nanokompozitler alanında çalışmış, ardından Ahi Evran Üniversitesi'nde öğretim üyesi olmuştur.
 
 TÜBİTAK ve AB projelerinde araştırmacı ve panel üyesi olarak görev yapmış, SCI  SCI-E indeksli dergilerde hakemlik yapmıştır. 2022'de Ege Üniversitesi'nde Farmasötik Teknoloji yüksek lisansını tamamlamış olup, son çalışmaları ilaç geliştirme üzerinedir" </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
